# perp-dex-tools

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CLI_COMMANDS.md  FUNDING_INTERVAL_FIX.md  GEMINI.md  INSTALLATION.md  MIGRATION_COMMANDS.md  MULTI_STRATEGY_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART_INTERACTIVE.md  README.md  RESUME_STRATEGY_INVESTIGATION.md  TESTING_GUIDE.md  TESTING_QUICKSTART.md  TEST_COVERAGE_IMPROVEMENTS.md  config_builder.py  config_yaml.py  current_aggressive_limit_behaviour.logs  current_bug.md  current_edge_case.logs  current_errors.md  current_openeing_behaviour.logs  current_order_behaviour.logs  current_take_profit_behaviour.logs  current_telegram_close_order_fail.logs  env_example.txt  env_example_multi_account.txt  error_log.md  fix_imports.py  grid_run.logs  grid_test.md  migrate_to_unified_logger.py  old_trading_bot.py  order.logs  paradex_websocket_connection_issue.md  (+12 more)
.claude/: settings.local.json
configs/: config.yml  funding_arb_test.yml  funding_arbitrage_20251015_175056.yml  funding_arbitrage_20251022_014738ZZX.yml  funding_arbitrage_20251022_014816YY.yml  grid.yml  new.yml  new_config.yml  real_funding_test.yml  test_retry.yml
dashboard/: __init__.py  config.py  control_server.py  event_bus.py  mock_renderer.py  models.py  service.py  state.py  viewer_utils.py
database/: MULTI_ACCOUNT_SETUP.md  credential_loader.py
docs/: ADDING_EXCHANGES.md  ADDING_NEW_EXCHANGES.md  ARCHITECTURE.md  ATOMIC_EXECUTOR_PATTERN.md  BUG_FIX_MULTI_SYMBOL_INIT.md  BUG_FIX_SYMBOL_NORMALIZATION.md  EXCHANGE_CLIENT_REFACTOR_PLAN.md  HEDGE_MANAGER_FLOW.md  IMPLEMENTATION_COMPLETE.md  INTERACTIVE_CONFIG_GUIDE.md  INTERACTIVE_CONFIG_PLAN.md  INTERACTIVE_CONFIG_STATUS.md  LOCAL-DEVELOPMENT.md  LOGGING_MIGRATION.md  MANUAL_TESTING_GUIDE.md  MULTI_ACCOUNT_DB_ARCHITECTURE.md  (+33 more)
docs-internal/: ADDING_EXCHANGES.md
exchange_clients/: __init__.py  base.py  base_client.py  base_funding_adapter.py  base_models.py  base_websocket.py  events.py  factory.py  pyproject.toml  websocket_interface.py
exchange_clients/aster/: __init__.py  client.py  common.py  funding_adapter.py  websocket_manager.py
exchange_clients/aster/client/: __init__.py  core.py
exchange_clients/aster/client/managers/: __init__.py  account_manager.py  market_data.py  order_manager.py  position_manager.py  websocket_handlers.py
exchange_clients/aster/client/utils/: __init__.py  caching.py  converters.py  helpers.py
exchange_clients/aster/funding_adapter/: __init__.py  adapter.py  fetchers.py  funding_client.py
exchange_clients/aster/websocket/: __init__.py  connection.py  manager.py  market_switcher.py  message_handler.py  order_book.py
exchange_clients/backpack/: __init__.py  client.py  common.py  funding_adapter.py  websocket_manager.py
exchange_clients/backpack/client/: __init__.py  core.py
exchange_clients/backpack/client/managers/: __init__.py  account_manager.py  market_data.py  order_manager.py  position_manager.py  websocket_handlers.py
exchange_clients/backpack/client/utils/: __init__.py  caching.py  converters.py  helpers.py
exchange_clients/backpack/funding_adapter/: __init__.py  adapter.py  fetchers.py  funding_client.py
exchange_clients/backpack/websocket/: __init__.py  connection.py  manager.py  market_switcher.py  message_handler.py  order_book.py
exchange_clients/edgex/: __init__.py  client.py  common.py  funding_adapter.py
exchange_clients/grvt/: __init__.py  client.py  common.py  funding_adapter.py
exchange_clients/lighter/: __init__.py  client.py  common.py  funding_adapter.py  websocket_manager.py
exchange_clients/lighter/client/: __init__.py  core.py
exchange_clients/lighter/client/managers/: __init__.py  account_manager.py  market_data.py  order_manager.py  position_manager.py  websocket_handlers.py
exchange_clients/lighter/client/utils/: __init__.py  caching.py  converters.py  helpers.py
exchange_clients/lighter/funding_adapter/: __init__.py  adapter.py  fetchers.py  funding_client.py
exchange_clients/lighter/websocket/: __init__.py  connection.py  manager.py  market_switcher.py  message_handler.py  order_book.py
exchange_clients/market_data/: __init__.py  price_stream.py
exchange_clients/paradex/: REFACTORING_PLAN.md  __init__.py  client.py  common.py  funding_adapter.md  funding_adapter.py  paradex_adapter.md  uncertainties.md
exchange_clients/paradex/client/: __init__.py  core.py
exchange_clients/paradex/client/managers/: __init__.py  account_manager.py  market_data.py  order_manager.py  position_manager.py  websocket_handlers.py
exchange_clients/paradex/client/utils/: __init__.py  caching.py  converters.py  helpers.py
exchange_clients/paradex/funding_adapter/: __init__.py  adapter.py  fetchers.py  funding_client.py
exchange_clients/paradex/websocket/: __init__.py  connection.py  manager.py  market_switcher.py  message_handler.py  order_book.py
(+495 files in other folders)
